upgrade project - java 21 - spring 3.4